<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_padding"
    tools:context=".UI.login.LoginActivity"
    android:focusable="true" android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/login_img_appicon"
        android:layout_height="@dimen/login_img_appicon"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_pikaos" />


    <CheckBox
        android:id="@+id/cbxRememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/rememberme"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btLogin"
        style="@style/button_solid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:layout_marginEnd="4dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btLocal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerifyEmail" />


    <Button
        android:id="@+id/btLocal"
        style="@style/button_solid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:text="@string/local"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btLogin"
        app:layout_constraintTop_toTopOf="@+id/btLogin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:text="@string/AskNoRegister"
        app:layout_constraintBottom_toBottomOf="@+id/btRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btRegister" />

    <Button
        android:id="@+id/btRegister"
        style="@style/button_transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo electrónico/Usuario" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/ic_hide_password"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="20"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="Contraseña" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="¿Has olvidado el usuario o la contraseña?"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/cbxRememberme"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvVerifyEmail"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="¿No te llegó el correo de verificación? Asegurate que no está en tu bandeja de spam, si aun así no lo has recibido puedes pulsar en este mensaje para volver a reenviarlo"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/cbxRememberme"
        app:layout_constraintTop_toBottomOf="@+id/cbxRememberme" />

</android.support.constraint.ConstraintLayout>